# Othello-practice

./: .gitignore  CMakeLists.txt  Data_transform.cpp  Digraph.gv  GA_salesman.py  G_test.py  NNpolicy.ipynb  Othello.cpp  Othello_MCTS.py  Othello_RL.py  Othello_SL.py  Othello_SLpolicy.py  Othello_ValueNetwork.py  Othello_common.py  Othello_comprtition.py  Othello_config.cpp  Othello_config.h  Othello_dualnetwork.py  Othello_play.py  Othello_process.py  Othello_pygame_test.py  Othello_test.ipynb  Pygame_test.py  README.md  SL_practice.cpp  TensorFlow_intro.ipynb  Untitled.ipynb  Untitled1.ipynb  basic.cpp  bin_tree  binary_tree  common.cpp  common.h  graph  graphs  my  sample.dot
.ipynb_checkpoints/: TensorFlow_intro-checkpoint.ipynb  Untitled-checkpoint.ipynb
Sequential_model/: saved_model.pb
Sequential_model/variables/: variables.data-00000-of-00001  variables.index
data/: SLpolicyvsMCTS.txt  SLpolicyvsMCTS_value.txt  cnn_0819_model.json  cnn_0819_weights.hdf5  state.npy  state.txt.npy  value.npy  value.txt  value2.txt
logs/: events.out.tfevents.1598256340.DESKTOP-NNMLH4F  events.out.tfevents.1598357121.DESKTOP-NNMLH4F
logs/train/: events.out.tfevents.1598370111.DESKTOP-NNMLH4F.30396.1248.v2
matplotlib-cpp-master/: matplotlibcpp.h
matplotlib-cpp-master/contrib/: WinBuild.cmd
model/: latest2.h5
tensorflow_test36/: pip-selfcheck.json  pyvenv.cfg
tensorflow_test36/Scripts/: Activate.ps1  activate.bat  requirement.txt
tensorflow_test38/: pyvenv.cfg
tensorflow_test38/Scripts/: activate  activate.bat  autopep8-script.py
(+3 files in other folders)
